working out spacing issues

--- a/files/htdocs/cascade.css
+++ b/files/htdocs/cascade.css
@@ -663,12 +663,13 @@ footer a:active, footer a:hover {
 .basic_menu .cbi-page-actions {
   background: none repeat scroll 0 0 #FFFFFF;
   border-top: none;
-  padding: 0.3em 0.3em 0.3em 3em;
+  padding: 5px 5px 5px 5px;
+  text-align: center;
 }
 
 .basic_menu .cbi-page-actions input.cbi-button {
 	display: inline-block;
-	padding: 3.5em 2em 0 2em;
+	padding: 100px 45px 0 45px;
 	font-weight: bold;
 	box-shadow: none;
 }
@@ -692,6 +693,8 @@ footer a:active, footer a:hover {
 	overflow: auto;
 	padding: 0.5em;
 	margin-top: 10px;
+	width: 80%;
+	margin: 0.5em auto;
 }
 
 td.hug-right {
